# ACCOUNT_HUB

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  alembic.ini  deny.toml  docker-compose.yml  osv-scanner.toml  package-lock.json  package.json  pyproject.toml  railway.json  rust-toolchain.toml
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  rust.yml
account_hub/: config.py
account_hub/api/: dependencies.py  main.py  utils.py
account_hub/api/routers/: accounts.py  auth.py  emails.py  oauth.py  search.py
account_hub/cli/: auth_commands.py  close_commands.py  email_commands.py  helpers.py  main.py  search_commands.py
account_hub/data/: deletion_registry.json
account_hub/db/: base.py  models.py
account_hub/db/migrations/: env.py
account_hub/db/migrations/versions/: a78cdac147f7_add_pkce_and_nonce_to_oauth_states.py
account_hub/discovery/: base.py  gravatar.py  hibp.py  oauth_profile.py
account_hub/oauth/: apple.py  apple_jwt.py  google.py  meta.py  microsoft.py  providers.py
account_hub/security/: encryption.py  jwt.py
account_hub/services/: closure_service.py  discovery_service.py  email_service.py  email_verification_service.py  export_service.py  mail_service.py  oauth_service.py  password_reset_service.py  user_service.py
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/migrations/: V0001__initial.sql
crates/core/src/: closure.rs  crypto.rs  discovery.rs  error.rs  keychain.rs  lib.rs  mail.rs  oauth.rs  session.rs  types.rs  vault.rs
crates/gui/: Cargo.toml  build.rs  tauri.conf.json
crates/gui/capabilities/: default.json
crates/gui/icons/: icon.icns
crates/gui/src/: main.rs
docs/: SYSTEM_DESIGN_WEB_UI.md  desktop-threat-model.md  quality-gates.md
docs/adr/: 0001-three-crate-workspace.md  0002-keychain-abstraction.md  0003-vault-design.md  0004-oauth-providers.md  0005-tauri-ipc.md
docs/design/: 01-workspace-architecture.md  02-keychain-abstraction.md  03-vault.md  04-oauth-providers.md  05-tauri-ipc.md
legal/: DEPLOY.md  package-lock.json  package.json  wrangler.toml
legal/src/: worker.js
scripts/: check.sh
tests/: conftest.py  helpers.py  test_config.py
tests/test_api/: test_auth_endpoints.py  test_closure_endpoints.py  test_oauth_and_emails.py  test_search_endpoints.py
tests/test_cli/: conftest.py  test_auth_commands.py  test_close_commands.py  test_email_commands.py  test_search_commands.py
tests/test_services/: test_closure_service.py  test_discovery_service.py  test_email_service.py  test_encryption.py  test_export_service.py  test_hashing.py  test_helpers.py  test_jwt.py  test_models.py  test_oauth_service.py  test_providers.py  test_scanners.py  test_user_service.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.module.css  App.tsx  index.css
web/src/api/: auth.ts  client.ts  closures.ts  emails.ts  scan.ts
web/src/components/: brand-logo-animated.module.css  brand-logo-animated.tsx  brand-logo.tsx  page-transition.module.css  page-transition.tsx
web/src/components/layout/: app-layout.module.css  app-layout.tsx  auth-guard.tsx  sidebar.module.css  sidebar.tsx
web/src/lib/: utils.ts
web/src/pages/: closures.module.css  closures.tsx  dashboard.module.css  dashboard.tsx  emails.module.css  emails.tsx  forgot-password.tsx  login.module.css  login.tsx  register.module.css  register.tsx  reset-password.tsx  scan-detail.module.css  scan-detail.tsx  scan.module.css  scan.tsx  verify-email.tsx  welcome.module.css  welcome.tsx
web/src/stores/: auth-store.ts
web/src/types/: api.ts
worker/: wrangler.toml
worker/src/: index.js
