[package]
name = "account-hub-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "ACCOUNT_HUB desktop GUI — Tauri 2 shell wrapping the React SPA."

publish = false

[lints]
workspace = true

[dependencies]
account_hub_core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Tauri 2 shell. Plugins (dialog, shell, deep-link, notification) arrive alongside the IPC
# commands that use them (Phase 3 per docs/design/05-tauri-ipc.md §Capability model).
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "account-hub-gui"
path = "src/main.rs"
